[package]
name = "mini-moka"
version = "0.10.1"
edition = "2018"
rust-version = "1.61"

description = "A lighter edition of Moka, a fast and concurrent cache library"
license = "MIT OR Apache-2.0"
# homepage = "https://"
documentation = "https://docs.rs/mini-moka/"
repository = "https://github.com/moka-rs/mini-moka"
keywords = ["cache", "concurrent"]
categories = ["caching", "concurrency"]
readme = "README.md"
exclude = [".circleci", ".devcontainer", ".github", ".gitpod.yml", ".vscode"]
build = "build.rs"

[features]
default = ["sync"]

sync = ["dashmap"]

testing = []

[dependencies]
crossbeam-channel = "0.5.5"
crossbeam-utils = "0.8"
smallvec = "1.8"
tagptr = "0.2"

# Opt-out serde and stable_deref_trait features
# https://github.com/Manishearth/triomphe/pull/5
triomphe = { version = "0.1.3", default-features = false }

# Optional dependencies (enabled by default)
dashmap = { version = "5.2", optional = true }

[dev-dependencies]
anyhow = "1.0.19"
getrandom = "0.2"
once_cell = "1.7"
skeptic = "0.13"

[target.'cfg(trybuild)'.dev-dependencies]
trybuild = "1.0"

[target.'cfg(skeptic)'.build-dependencies]
skeptic = "0.13.5"

# https://docs.rs/about/metadata
[package.metadata.docs.rs]
# Build the doc with some features enabled.
features = []
rustdoc-args = ["--cfg", "docsrs"]
